2000-07-10  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* sigc++/configure.in: fix bug in threading-related code (Yes, I
	did submit that to Karl).

	* configure.in: use -isystem instead of -I for X headers. This
	fixes a problem on solaris with a recent gcc; 
	put the front-end code after the X detection code;
	configure in sigc++ before lib/

	* src/lyx_main.C (commandLineHelp): remove -display from command
	line help.

2000-07-08  Dekel Tsur  <dekel@math.tau.ac.il>

	* src/text.C (GetColumnNearX): Better behavior when a RTL
	paragraph is ended by LTR text.

	* src/text2.C (SetCurrentFont,CursorLeftIntern,CursorRightIntern):
	Ditto

2000-07-08  Dekel Tsur  <dekel@math.tau.ac.il>

	* src/WorkArea.C  (request_clipboard_cb): Set clipboard_read to
        true when clipboard is empty.
                                        
2000-07-08  Dekel Tsur  <dekel@math.tau.ac.il>

	* text.C (Backspace): Prevent rebreaking of a row if it is the last
	row of the paragraph.
	(SetHeightOfRow): Call to PrepareToPrint with 7th argument = false 
	to prevent calculation of bidi tables

2000-07-07  Juergen Vigna  <jug@sad.it>

	* src/screen.C (ToggleSelection): added y_offset and x_offset
 	parameters.

	* src/insets/insettext.C (InsetMotionNotify): fixed selection with
	mouse.

	* src/text.C (GetVisibleRow): fixed selection drawing in insets.

	* src/insets/insettext.C: fixed Layout-Display!

2000-07-07  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* configure.in: add check for strings.h header.

	* src/spellchecker.C: include <strings.h> in order to have a
	definition for bzero().

2000-07-07  Juergen Vigna  <jug@sad.it>

	* src/insets/insettext.C (draw): set the status of the bv->text to
	CHANGED_IN_DRAW if top_x changed and so a reinit is necessary.

	* src/screen.C (DrawOneRow): 
	(DrawFromTo): redraw the actual row if something has changed in it
	while drawing.

	* src/text.C (draw): call an update of the toplevel-inset if something